--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.16.2",
     "rimraf": "^3.0.2",
     "styled-jsx": "^4.0.1"
   },
