--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.16.2",
     "rimraf": "^3.0.2",
+    "sass": "^1.42.1",
     "styled-jsx": "^4.0.1"
   },
   "devDependencies": {
