--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.15",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@toast-ui/react-editor": "^3.1.0",
     "@types/prop-types": "^15.7.4",
     "@types/scheduler": "^0.16.2",
     "deepmerge": "^4.2.2",
     "graphql": "^15.6.0",
     "lodash": "^4.17.21",
     "next": "11.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.16.2",
+    "react-redux": "^7.2.5",
     "rimraf": "^3.0.2",
     "sass": "^1.42.1",
     "styled-jsx": "^4.0.1"
@@ -29,6 +33,7 @@
     "@types/react": "^17.0.24",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.4.3"
   }
 }
