--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^7.2.5",
     "rimraf": "^3.0.2",
     "sass": "^1.42.1",
-    "styled-jsx": "^4.0.1"
+    "styled-jsx": "^4.0.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.10.1",
