--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.16.2",
     "react-redux": "^7.2.5",
+    "remove-markdown": "^0.3.0",
     "rimraf": "^3.0.2",
     "sass": "^1.42.1",
     "styled-jsx": "^4.0.1",
