[Add] User > 컬럼, 브랜드 반응형

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "deepmerge": "^4.2.2",
     "graphql": "^15.6.0",
     "lodash": "^4.17.21",
+    "markdown-to-text": "^0.1.1",
     "next": "11.1.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.16.2",
     "react-redux": "^7.2.5",
-    "remove-markdown": "^0.3.0",
     "rimraf": "^3.0.2",
     "sass": "^1.42.1",
     "styled-jsx": "^4.0.1",
