--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@toast-ui/react-editor": "^3.1.0",
     "@types/prop-types": "^15.7.4",
     "@types/scheduler": "^0.16.2",
+    "axios": "^0.24.0",
     "date-fns": "^2.25.0",
     "deepmerge": "^4.2.2",
     "graphql": "^15.6.0",
