--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.16.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.5",
     "rimraf": "^3.0.2",
     "sass": "^1.42.1",
