--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env NODE_ENV=production next start",
     "lint": "next lint",
     "apollo:codegen": "rimraf src/__generated__ && apollo client:codegen src/__generated__ --target=typescript --outputFlat"
   },
@@ -19,6 +19,7 @@
     "@types/prop-types": "^15.7.4",
     "@types/scheduler": "^0.16.2",
     "axios": "^0.24.0",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.25.0",
     "deepmerge": "^4.2.2",
     "graphql": "^15.6.0",
