--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.24",
     "eslint": "7.32.0",
