--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "rimraf": "^3.0.2",
     "sass": "^1.42.1",
+    "sharp": "^0.29.3",
     "styled-jsx": "^4.0.1",
     "swr": "^1.0.1"
   },
