--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "stylefolks-frontend",
+  "homepage": "https://www.the-folks.com/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
