--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "graphql": "^15.6.0",
     "lodash": "^4.17.21",
     "markdown-to-text": "^0.1.1",
-    "next": "12.1.5",
+    "next": "^12.2.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.16.2",
